--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,8 +5,15 @@
         align-items: center;
         justify-content: center;
     }
-    .categories-section,.whyChooseUs-section{
+    .categories-section{
         padding-left: 60px;
         padding-right: 60px;
+    }
+    .whyChooseUs-section{
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    .stats-main{
+        height: 900px;
     }
 }
