--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,30 @@
+@keyframes scrollLeft {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes scrollRight {
+  0% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.scroll-left {
+  animation: scrollLeft 60s linear infinite;
+}
+
+.scroll-right {
+  animation: scrollRight 60s linear infinite;
+}
+
+
 @media (max-width: 426px) {
     .whyChooseUs-card{
         display: flex;
